--- a/package.json
+++ b/package.json
@@ -11,13 +11,23 @@
   "private": true,
   "dependencies": {
     "@angular/animations": "^16.2.0",
+    "@angular/cdk": "^16.2.11",
     "@angular/common": "^16.2.0",
     "@angular/compiler": "^16.2.0",
     "@angular/core": "^16.2.0",
     "@angular/forms": "^16.2.0",
+    "@angular/material": "~16.2.11",
     "@angular/platform-browser": "^16.2.0",
     "@angular/platform-browser-dynamic": "^16.2.0",
     "@angular/router": "^16.2.0",
+    "@tots/auth": "^16.0.6",
+    "@tots/cloud-storage": "^16.0.0",
+    "@tots/core": "^16.0.0",
+    "@tots/date-column": "^16.0.2",
+    "@tots/editable-columns": "^16.0.5",
+    "@tots/form": "^16.0.22",
+    "@tots/table": "^16.0.15",
+    "parse5": "^7.1.2",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0",
     "zone.js": "~0.13.0"
